# AP1-2

./: CMakeLists.txt  Client.cpp  README.md
Server/: TcpServer.cpp  UdpServer.cpp  classified.csv  main.cpp
Server/Sockets/: Socket.cpp  Socket.h  SocketStrategy.h  Tcp.cpp  Tcp.h  Udp.cpp  Udp.h
Server/classifying/: Classifier.h  Iris.cpp  KnnClassifier.cpp  KnnClassifier.h  Reader.cpp  Reader.h
Server/testingsockets/: tcpClientTest.cpp  tcpServerTest.cpp
classification/: Classifier.h  Iris.cpp  Iris.h  KnnClassifier.h  Reader.cpp  Reader.h  StrToIris.cpp  StrToIris.h
classifying/: Classifiable.h  Classifier.h  Iris.cpp  Iris.h  Reader.h
client/: Client.cpp
servers/: Server.cpp  Server.h  TcpServer.cpp  UdpServer.cpp
sockets/: ServerSocket.h  Socket.h  TcpServerSocket.cpp  TcpServerSocket.h  TcpSocket.cpp  TcpSocket.h  UdpServerSocket.cpp  UdpServerSocket.h  UdpSocket.cpp  UdpSocket.h
